<package format="2">
    <name>demo</name>
    <description>demo</description>
    <maintainer email="yu.zhang.bit@gmail.com">Yu Zhang</maintainer>
    <license>Apache 2.0</license>
    <version>0.0.1</version>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>rosparam_handler</depend>
    <depend>roscpp</depend>A
    <depend>roslib</depend>
    <depend>std_msgs</depend>
</package>